# openagent-mcp

./: .gitignore  README.md  pyproject.toml
examples/: claude_code_mcp.json  targets.example.toml
src/oa_agent_client/: __init__.py  client.py  identity.py  iroh_node.py  session.py  ticket.py
src/oa_agent_client/auth/: __init__.py  device_cert.py
src/openagent_mcp/: __init__.py  __main__.py  config.py  errors.py  identity.py  log.py  server.py  tools.py
src/openagent_mcp/backends/: __init__.py  base.py  standalone.py
